# asbear

./: .gitignore  ASBEAR.desktop  ASBEAR.pro  CMakeLists.txt  README.md  README.txt  snap.yaml  snapcraft.yaml
Release files/: Options.pastouche  Rates.pastouche
Sources/: Application.cpp  Application.h  AudioRecorder.cpp  AudioRecorder.h  ConverterWidget.cpp  ConverterWidget.h  DevicesComboBox.cpp  DevicesComboBox.h  MRecorder.cpp  MRecorder.h  MRecorder.pro  OptionsWidget.cpp  OptionsWidget.h  RecorderWidget.cpp  RecorderWidget.h  RecordingsManagerWidget.cpp  RecordingsManagerWidget.h  main.cpp  mrecorder_fr.ts  resources.rc
Sources/CustomWidgets/: AudioLevelWidget.cpp  AudioLevelWidget.h  DevicesComboBox.cpp  DirectJumpSlider.cpp  DirectJumpSlider.h  SpectrumWidget.cpp  SpectrumWidget.h
Sources/Tools/: AudioRecorder.cpp  AudioRecorder.h  Converter.cpp  Converter.h  MusicPlayer.cpp  MusicPlayer.h
assets/: asbear.desktop
assets/lang/: asbear-fr.qm
include/: application.hpp
include/application/: converter_widget.hpp  recorder_widget.hpp  recording_manager_widget.hpp  settings_widget.hpp
include/custom_widgets/: audio_level_bar.hpp  devices_combo_box.hpp  direct_jump_slider.hpp  level_timeline.hpp  playback_bar.hpp
include/tools/: audio_recorder.hpp  converter.hpp
lang/: asbear-fr.ts
snap/data/: default-config.getout
snap/data/lang/: asbear-fr.qm
src/: Application.cpp  application.cpp  application.hpp  main.cpp
src/application/: converter_widget.cpp  converter_widget.hpp  recorder_widget.cpp  recorder_widget.hpp  recording_manager_widget.cpp  recording_manager_widget.hpp  settings_widget.cpp
src/custom_widgets/: audio_level_bar.cpp  devices_combo_box.cpp  direct_jump_slider.cpp  level_timeline.cpp  playback_bar.cpp
src/sv/: RecordingsManagerWidget (copy).cpp  RecordingsManagerWidget (copy).h
src/tabs/: ConverterWidget.cpp  ConverterWidget.hpp  OptionsWidget.cpp  OptionsWidget.hpp  RecorderWidget.cpp  RecorderWidget.hpp  RecordingsManagerWidget.cpp  RecordingsManagerWidget.hpp
src/tools/: AudioRecorder.cpp  AudioRecorder.hpp  Converter.cpp  RecordingPlayer.hpp  audio_recorder.cpp  audio_recorder.hpp  converter.cpp  converter.hpp  player.cpp
src/widgets/: AudioLevelWidget.cpp  AudioLevelWidget.hpp  DevicesComboBox.cpp  DevicesComboBox.hpp  DirectJumpSlider.cpp  DirectJumpSlider.hpp  PlaybackBar.cpp  PlaybackBar.hpp  SpectrumWidget.hpp
